feat: consolidar dashboard financeiro e otimizações finais